--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -14,14 +14,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-16 Sun 11:36]
+#+CAPTION: Clock summary at [2017-07-16 Sun 11:43]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *46:29* |       |      | 100.0 |
+| *Total time*                                                                | *46:34* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 46:29   |       |      | 100.0 |
-| Active                                                                      |         | 46:29 |      | 100.0 |
+| Stories                                                                     | 46:34   |       |      | 100.0 |
+| Active                                                                      |         | 46:34 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   0.9 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:20 |   2.9 |
 | COMPLETED Implement the context class                                       |         |       | 1:12 |   2.6 |
@@ -41,7 +41,7 @@
 | COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   2.0 |
 | COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   1.6 |
 | COMPLETED Move helpers from main yarn namespace                             |         |       | 1:29 |   3.2 |
-| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  19.4 |
+| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  19.3 |
 | CANCELLED Move artefacts from formatters into meta-model                    |         |       | 0:54 |   1.9 |
 | CANCELLED Use transformation context in quilt                               |         |       | 0:20 |   0.7 |
 | COMPLETED Create an options validator                                       |         |       | 0:39 |   1.4 |
@@ -49,7 +49,7 @@
 | COMPLETED Fix options test break on windows                                 |         |       | 0:10 |   0.4 |
 | COMPLETED Investigate why gcc builds are slower than clang                  |         |       | 1:03 |   2.3 |
 | COMPLETED Create a transformation that expands artefact properties          |         |       | 0:45 |   1.6 |
-| STARTED Move enablement into yarn                                           |         |       | 6:37 |  14.2 |
+| STARTED Move enablement into yarn                                           |         |       | 6:42 |  14.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -624,6 +624,7 @@ them up. This was done in formattables in the transformer. We now need
 a transformation in yarn for this.
 
 *** STARTED Move enablement into yarn                                 :story:
+    CLOCK: [2017-07-16 Sun 11:37]--[2017-07-16 Sun 11:42] =>  0:05
     CLOCK: [2017-07-16 Sun 11:33]--[2017-07-16 Sun 11:36] =>  0:03
     CLOCK: [2017-07-16 Sun 11:29]--[2017-07-16 Sun 11:32] =>  0:03
     CLOCK: [2017-07-16 Sun 00:16]--[2017-07-16 Sun 00:28] =>  0:12
@@ -673,6 +674,8 @@ Problems:
   properties against the archetype locations. We not doing that in
   yarn, so nothing is coming out. This was done during transformation
   in formattables.
+- with a move into yarn, we seem to have broken the overwrite flag
+  logic; changes no longer result in new code being generated.
 
 To do:
 
