--- a/doc/agile/v1/sprint_backlog_02.org
+++ b/doc/agile/v1/sprint_backlog_02.org
@@ -14,18 +14,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-16 Sun 16:41]
+#+CAPTION: Clock summary at [2017-07-16 Sun 16:49]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *46:34* |       |      | 100.0 |
+| *Total time*                                                                | *46:51* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 46:34   |       |      | 100.0 |
-| Active                                                                      |         | 46:34 |      | 100.0 |
+| Stories                                                                     | 46:51   |       |      | 100.0 |
+| Active                                                                      |         | 46:51 |      | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:24 |   0.9 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:20 |   2.9 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:20 |   2.8 |
 | COMPLETED Implement the context class                                       |         |       | 1:12 |   2.6 |
-| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |   9.0 |
+| COMPLETED Implement the exogenous transformation chain                      |         |       | 4:11 |   8.9 |
 | COMPLETED Implement the pre-processing chain                                |         |       | 1:35 |   3.4 |
 | COMPLETED Refactor mapping repository factory                               |         |       | 0:12 |   0.4 |
 | COMPLETED Implement the output languages transform                          |         |       | 0:37 |   1.3 |
@@ -34,22 +34,22 @@
 | COMPLETED Implement the merge transform                                     |         |       | 0:40 |   1.4 |
 | COMPLETED Implement the model generation chain                              |         |       | 0:13 |   0.5 |
 | COMPLETED Implement the model assembly chain                                |         |       | 0:50 |   1.8 |
-| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |   7.6 |
+| COMPLETED Implement the post-processing chain                               |         |       | 3:31 |   7.5 |
 | COMPLETED Move helpers from =transforms= namespace                          |         |       | 0:45 |   1.6 |
 | COMPLETED Replace expanders with transforms                                 |         |       | 0:03 |   0.1 |
 | COMPLETED Port all expander unit tests to transforms                        |         |       | 0:42 |   1.5 |
 | COMPLETED Remove all legacy classes from yarn                               |         |       | 0:55 |   2.0 |
 | COMPLETED Implement the mapper as a transform                               |         |       | 0:46 |   1.6 |
 | COMPLETED Move helpers from main yarn namespace                             |         |       | 1:29 |   3.2 |
-| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  19.3 |
+| COMPLETED Move all data types into its own namespace                        |         |       | 9:00 |  19.2 |
 | CANCELLED Move artefacts from formatters into meta-model                    |         |       | 0:54 |   1.9 |
 | CANCELLED Use transformation context in quilt                               |         |       | 0:20 |   0.7 |
 | COMPLETED Create an options validator                                       |         |       | 0:39 |   1.4 |
-| COMPLETED Implement the code-generation chain                               |         |       | 4:33 |   9.8 |
+| COMPLETED Implement the code-generation chain                               |         |       | 4:33 |   9.7 |
 | COMPLETED Fix options test break on windows                                 |         |       | 0:10 |   0.4 |
-| COMPLETED Investigate why gcc builds are slower than clang                  |         |       | 1:03 |   2.3 |
+| COMPLETED Investigate why gcc builds are slower than clang                  |         |       | 1:03 |   2.2 |
 | COMPLETED Create a transformation that expands artefact properties          |         |       | 0:45 |   1.6 |
-| STARTED Move enablement into yarn                                           |         |       | 6:42 |  14.4 |
+| STARTED Move enablement into yarn                                           |         |       | 6:59 |  14.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -624,6 +624,9 @@ them up. This was done in formattables in the transformer. We now need
 a transformation in yarn for this.
 
 *** STARTED Move enablement into yarn                                 :story:
+    CLOCK: [2017-07-16 Sun 16:46]--[2017-07-16 Sun 16:49] =>  0:03
+    CLOCK: [2017-07-16 Sun 16:38]--[2017-07-16 Sun 16:45] =>  0:06
+    CLOCK: [2017-07-16 Sun 16:30]--[2017-07-16 Sun 16:37] =>  0:07
     CLOCK: [2017-07-16 Sun 11:37]--[2017-07-16 Sun 11:42] =>  0:05
     CLOCK: [2017-07-16 Sun 11:33]--[2017-07-16 Sun 11:36] =>  0:03
     CLOCK: [2017-07-16 Sun 11:29]--[2017-07-16 Sun 11:32] =>  0:03
@@ -676,6 +679,10 @@ Problems:
   in formattables.
 - with a move into yarn, we seem to have broken the overwrite flag
   logic; changes no longer result in new code being generated.
+- we also have borked the includes: dependency builder is looking into
+  the formattables instead of element. However, we then run into
+  segmentation issues because we cannot find forward declarations on
+  the main element.
 
 To do:
 
