--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-23 Sun 12:48]
+#+CAPTION: Clock summary at [2017-07-23 Sun 13:10]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:57* |      |      | 100.0 |
+| *Total time*                                                                | *8:18* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:57   |      |      | 100.0 |
-| Active                                                                      |        | 7:57 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   4.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  13.6 |
-| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   1.5 |
-| STARTED Add meta-type support to yarn                                       |        |      | 3:29 |  43.8 |
-| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |   9.9 |
-| STARTED Tidy-up post-processing validation                                  |        |      | 2:10 |  27.3 |
+| Stories                                                                     | 8:18   |      |      | 100.0 |
+| Active                                                                      |        | 8:18 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:19 |   3.8 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:05 |  13.1 |
+| COMPLETED Create a tagging checklist                                        |        |      | 0:07 |   1.4 |
+| COMPLETED Tidy-up post-processing validation                                |        |      | 2:31 |  30.3 |
+| STARTED Add meta-type support to yarn                                       |        |      | 3:29 |  42.0 |
+| STARTED Add canonical archetype support to yarn                             |        |      | 0:47 |   9.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -103,6 +103,22 @@ Checklist:
 - write up release notes, publish them in github.
 - when tag build is finished, announce on twitter and linked in.
 - update bintray with the correct release notes.
+
+*** COMPLETED Tidy-up post-processing validation                      :story:
+    CLOSED: [2017-07-23 Sun 13:10]
+    CLOCK: [2017-07-23 Sun 12:49]--[2017-07-23 Sun 13:10] =>  0:21
+    CLOCK: [2017-07-23 Sun 12:41]--[2017-07-23 Sun 12:48] =>  0:07
+    CLOCK: [2017-07-23 Sun 12:18]--[2017-07-23 Sun 12:40] =>  0:22
+    CLOCK: [2017-07-23 Sun 11:51]--[2017-07-23 Sun 12:17] =>  0:26
+    CLOCK: [2017-07-23 Sun 11:15]--[2017-07-23 Sun 11:50] =>  0:35
+    CLOCK: [2017-07-20 Thu 07:20]--[2017-07-20 Thu 07:32] =>  0:12
+    CLOCK: [2017-07-20 Thu 06:51]--[2017-07-20 Thu 07:19] =>  0:28
+
+Tasks:
+
+- use the traversal instead of rolling our own loop.
+- validate injected types too.
+- add validation for meta-model types.
 
 *** STARTED Add meta-type support to yarn                             :story:
     CLOCK: [2017-07-20 Thu 06:46]--[2017-07-20 Thu 06:51] =>  0:05
@@ -196,20 +212,6 @@ Notes:
   index. Perhaps we should have a struct that aggregates both:
   archetype locations for meta-type? Or kernel can just return a
   =std::pair=.
-
-*** STARTED Tidy-up post-processing validation                        :story:
-    CLOCK: [2017-07-23 Sun 12:41]--[2017-07-23 Sun 12:48] =>  0:07
-    CLOCK: [2017-07-23 Sun 12:18]--[2017-07-23 Sun 12:40] =>  0:22
-    CLOCK: [2017-07-23 Sun 11:51]--[2017-07-23 Sun 12:17] =>  0:26
-    CLOCK: [2017-07-23 Sun 11:15]--[2017-07-23 Sun 11:50] =>  0:35
-    CLOCK: [2017-07-20 Thu 07:20]--[2017-07-20 Thu 07:32] =>  0:12
-    CLOCK: [2017-07-20 Thu 06:51]--[2017-07-20 Thu 07:19] =>  0:28
-
-Tasks:
-
-- use the traversal instead of rolling our own loop.
-- validate injected types too.
-- add validation for meta-model types.
 
 *** Rename transformers to adapters                                   :story:
 
