--- a/doc/agile/v1/sprint_backlog_03.org
+++ b/doc/agile/v1/sprint_backlog_03.org
@@ -13,20 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-07-23 Sun 18:30]
+#+CAPTION: Clock summary at [2017-07-25 Tue 08:46]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:23* |       |      | 100.0 |
+| *Total time*                                                                | *13:04* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:23   |       |      | 100.0 |
-| Active                                                                      |         | 12:23 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.6 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:18 |  10.5 |
+| Stories                                                                     | 13:04   |       |      | 100.0 |
+| Active                                                                      |         | 13:04 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:19 |   2.4 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:18 |   9.9 |
 | COMPLETED Create a tagging checklist                                        |         |       | 0:07 |   0.9 |
-| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  29.7 |
-| STARTED Add meta-type support to yarn                                       |         |       | 6:11 |  49.9 |
-| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   6.3 |
+| COMPLETED Tidy-up post-processing validation                                |         |       | 3:41 |  28.2 |
+| STARTED Add meta-type support to yarn                                       |         |       | 6:17 |  48.1 |
+| STARTED Add canonical archetype support to yarn                             |         |       | 0:47 |   6.0 |
+| STARTED Allow logging during initialisation                                 |         |       | 0:35 |   4.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -123,6 +124,7 @@ Tasks:
 - add validation for meta-model types.
 
 *** STARTED Add meta-type support to yarn                             :story:
+    CLOCK: [2017-07-25 Tue 08:05]--[2017-07-25 Tue 08:11] =>  0:06
     CLOCK: [2017-07-23 Sun 18:12]--[2017-07-23 Sun 18:30] =>  0:18
     CLOCK: [2017-07-23 Sun 17:56]--[2017-07-23 Sun 18:11] =>  0:15
     CLOCK: [2017-07-23 Sun 17:35]--[2017-07-23 Sun 17:56] =>  0:21
@@ -218,6 +220,20 @@ Notes:
   index. Perhaps we should have a struct that aggregates both:
   archetype locations for meta-type? Or kernel can just return a
   =std::pair=.
+
+*** STARTED Allow logging during initialisation                       :story:
+    CLOCK: [2017-07-25 Tue 08:11]--[2017-07-25 Tue 08:46] =>  0:35
+
+At present we assume the log has not been initialised during
+initialisation. The only reason for this is with unit testing because
+each test initialises the log differently. However, one simple way
+around this is to have a log file for the entire test suite and
+separate log files for each test as we have now. Initialisation
+logging would go in this main file.
+
+This is a bit of a more pressing issue because we now make use of name
+builders during initialisation in order to setup the formatter's
+meta-type.
 
 *** Rename transformers to adapters                                   :story:
 
@@ -413,6 +429,9 @@ Enable c++17. - windows requires cpp latest. Then fix inner namespaces
 (e.g. a::b::c).
 
 We still need to support the old syntax for pre c++-17.
+
+We need to add a new standard to =quilt.cpp= and when its set to
+c++-17 we should automatically use inline namespaces.
 
 *** Move helpers into yarn                                            :story:
 
